--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -55,3 +55,12 @@ lectures:
     assignment:
       - label: reading
         link: reading2.html
+
+  - date: 2025-11-07
+    type:
+    content:
+      - title: Exercise 03
+        slides:
+    assignment:
+      - label: "Assignment 2: MCMC & Gibbs Sampling"
+        link: assignment2.html
