--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -76,3 +76,12 @@ lectures:
     assignment:
       - label: "Assignment 2: MCMC & Gibbs Sampling"
         link: assignment2.html
+
+  - date: 2025-11-04
+    type:
+    content:
+      - title: Exercise 04
+        slides:
+    assignment:
+      - label: "Assignment 3: Variational Autoencoders"
+        link: assignment2.html
