--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -97,3 +97,12 @@ lectures:
     assignment:
       - label: "Assignment 3: Variational Autoencoders"
         link: assignment3.html
+
+  - date: 2025-11-21
+    type:
+    content:
+      - title: Exercise 05
+        slides:
+    assignment:
+      - label: "Assignment 4: GANs"
+        link: assignment4.html
