--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -177,3 +177,12 @@ lectures:
     assignment:
       - label: "Assignment 7: (Latent) Autoregressive Models"
         link: assignment7.html 
+
+  - date: 2025-12-19
+    type:
+    content:
+      - title: Exercise 09
+        slides:
+    assignment:
+      - label: "Assignment 8: Flows"
+        link: assignment8.html 
