--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -178,6 +178,17 @@ lectures:
       - label: "Assignment 7: (Latent) Autoregressive Models"
         link: assignment7.html 
 
+  - date: 2025-12-18
+    type:
+    content:
+    - title: "Score-based Models"
+      slides:
+    reading:
+    - title: "Selected resources"
+    assignment:
+        - label: reading
+          link: reading9.html
+
   - date: 2025-12-19
     type:
     content:
