--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -197,3 +197,12 @@ lectures:
     assignment:
       - label: "Assignment 8: Flows"
         link: assignment8.html 
+
+  - date: 2026-01-09
+    type:
+    content:
+      - title: Exercise 09
+        slides:
+    assignment:
+      - label: "Assignment 9: Score-based Models"
+        link: assignment9.html 
