--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -217,3 +217,14 @@ lectures:
     assignment:
       - label: "Assignment 9: Score-based Models"
         link: assignment9.html 
+
+  - date: 2026-01-15
+    type:
+    content:
+    - title: "Stochastic Differential Equations"
+      slides:
+    reading:
+    - title: "Selected resources"
+    assignment:
+        - label: reading
+          link: reading11.html
