--- a/_data/schedule.yaml
+++ b/_data/schedule.yaml
@@ -248,3 +248,12 @@ lectures:
     assignment:
       - label: reading
         link: reading12.html
+
+  - date: 2026-01-23
+    type:
+    content:
+      - title: Exercise 12
+        slides:
+    assignment:
+      - label: "Assignment 11: Flow Matching"
+        link: assignment11.html 
